--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bootstrap": "^5.3.0",
     "cors": "^2.8.5",
     "date-fns": "^2.30.0",
+    "dotenv": "^16.4.5",
     "mongodb": "^6.8.0",
     "nth-check": "^2.1.1",
     "react": "^17.0.2",
