--- a/backend/package.json
+++ b/backend/package.json
@@ -14,5 +14,10 @@
     "express": "^4.19.2",
     "mongodb": "^6.8.0"
   },
-  "description": ""
+  "description": "",
+  "jest": {
+    "moduleNameMapper": {
+      "^axios$": "axios/dist/node/axios.cjs"
+    }
+}
 }
